# portfolio

./: build.bash  main.sr
admin/: package.json  pnpm-lock.yaml  qwik.env.d.ts
admin/src/: global.css  root.tsx
admin/src/routes/: index.tsx  layout.tsx
admin/src/routes/auth/google/: index.tsx
admin/src/routes/panel/: index.tsx  layout.tsx
admin/src/routes/panel/project_add/: index.tsx
admin/src/routes/panel/project_update/: index.tsx
admin/src/routes/panel/skill_add/: index.tsx
admin/src/routes/panel/skill_update/: index.tsx
admin/src/utils/: client.ts  input_elements.tsx  maybe_uninit.ts  nullable_for_falsies.ts  on_update.ts  valibot_ext.ts
qwik/: .gitignore  env.example  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1755821159241-6bcc3e7f7d81a.mjs
qwik/src/: root.tsx
qwik/src/routes/: index.tsx
qwik/src/routes/link/: [link].tsx
qwik/src/routes/marked/: index.tsx
qwik/src/routes/projects/: index.tsx  layout.tsx  markdown.css
qwik/src/routes/projects/(custom)/: layout.tsx
qwik/src/routes/projects/(custom)/web_matric_and_vital/: Report.tsx  index.mdx
qwik/src/routes/projects/(from_network)/[project_id]/: index.tsx
qwik/src/routes/projects/[project_id]/: index.tsx
qwik/src/utils/: Flare.tsx  components.tsx  cookie.ts  endpoint.ts  endpoint_view.tsx  illegal.tsx  links.ts
rust/: Cargo.toml
rust/src/: lib.rs
terraform/: .gitignore  main.tf
