[package]
name = "calculator_web"
version = "0.1.0"
description = "wasm package for the `calculator` project."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
# claw-ql = { path = "../../claw-ql", features = ["serde", "sqlite"]}
# serde = { version = "1.0.203"}
# sqlx = { version = "0.8.5" }

